@@ -20,19 +20,19 @@ namespace FatturaElettronica.Common
         /// <summary>
         /// Gets or sets the Denominazione.
         /// </summary>
-        [DataProperty]
+        [DataProperty(order: 0)]
         public string Denominazione { get; set; }
 
         /// <summary>
         /// Gets or sets the Nome.
         /// </summary>
-        [DataProperty]
+        [DataProperty(order: 1)]
         public string Nome { get; set; }
 
         /// <summary>
         /// Gets or sets the Cognome.
         /// </summary>
-        [DataProperty]
+        [DataProperty(order: 2)]
         public string Cognome { get; set; }
 
         /// <summary>
