@@ -23,6 +23,7 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
         </IdFiscaleIVA>
         <Anagrafica>
           <Denominazione>SOCIETA' ALPHA SRL</Denominazione>
+          <Titolo>Titolo</Titolo>
         </Anagrafica>
         <RegimeFiscale>RF01</RegimeFiscale>
       </DatiAnagrafici>
@@ -39,6 +40,7 @@ xsi:schemaLocation="http://ivaservizi.agenziaentrate.gov.it/docs/xsd/fatture/v1.
         <CodiceFiscale>09876543210</CodiceFiscale>
         <Anagrafica>
           <Denominazione>BETA GAMMA</Denominazione>
+          <Titolo>Titolo</Titolo>
         </Anagrafica>
       </DatiAnagrafici>
       <Sede>
